feat: enrich portfolio content with self-evaluation metrics and detail pages
- Fill all TODO placeholders with concrete metrics from 2024-2025 self-evaluation
- Add project detail pages for escrow service and gift shop (ko/en)
- Expand offline payment and payment/settlement detail pages with structured sections
- Update experience highlights with quantitative results (+271% transaction volume, etc.)
- Improve profile with storytelling: identity statement, domain expansion narrative, and work philosophy
- Add CodeIgniter to tech stack and Gabia projects, reorder Oracle before MySQL
- Fix Gabia location from Seoul to Pangyo
- Add runbook documentation to devexp project highlights

--- a/src/content/en/experience.mdx
+++ b/src/content/en/experience.mdx
@@ -9,19 +9,19 @@ items:
     website: "https://www.daangnpay.com"
     techUsed: ["Kotlin", "Spring Framework", "JPA", "MySQL", "Redis", "Kafka", "Vue.js", "Docker", "Kubernetes"]
     highlights:
-      - "Built PG redundancy and real-time settlement system, improving payment stability and reducing partner settlement cycles"
-      - "Developed prepaid settlement and promotion system for offline payments, contributing to successful service launch"
-      - "Enhanced transaction safety with card payment and shipment tracking features for escrow service"
-      - "Built B2B gift card issuance platform, establishing a new business channel"
-      - "Migrated Spring Boot 2→3 and Vue.js 2→3, resolving security vulnerabilities and improving maintainability"
+      - "Designed core offline payment features and ran brand promotions, driving +104% new user acquisition and 1.5x daily signups"
+      - "Improved escrow service conversion via funnel/CS analysis and card payment, contributing to +122% buyers and +271% transaction volume"
+      - "Strengthened payment infrastructure with PG redundancy and KCP integration, automated ~4,600 manual cash receipt reissuances"
+      - "Built B2B gift card platform and Karrot Alba chatroom integration, establishing new business channels"
+      - "Migrated Spring Boot 2→3, Vue.js 2→3, and restructured 40+ modules for improved maintainability"
   - slug: "gabia"
     company: "Gabia"
     role: "Software Engineer"
     startDate: "2021-05"
     endDate: "2024-05"
-    location: "Seoul"
+    location: "Pangyo"
     website: "https://domain.gabia.com"
-    techUsed: ["Java", "Spring Framework", "JPA", "PHP", "MySQL", "Oracle", "Nginx", "Docker"]
+    techUsed: ["Java", "Spring Framework", "JPA", "PHP", "CodeIgniter", "Oracle", "MySQL", "Nginx", "Docker"]
     highlights:
       - "Developed and operated multiple domain registrar services (registration, renewal, reservation, etc.)"
       - "Built MSA with Java Spring MVC/JPA, RESTful APIs and batch jobs"
