--- a/src/content/en/profile.mdx
+++ b/src/content/en/profile.mdx
@@ -8,4 +8,8 @@ location: "Seoul, South Korea"
 photo: "/images/Gopherized_Luke.png"
 ---
 
-Software engineer specializing in payment and settlement systems. At Karrot Pay, building PG redundancy and real-time settlement infrastructure with Kotlin + Spring. At Gabia, improved a legacy communication daemon's throughput by 1,000x (200 → 200,000 concurrent requests). Proven track record of systematically modernizing legacy systems to deliver measurable business impact.
+Backend engineer who designs payment system reliability and drives user growth on top of it.
+
+At Karrot Pay, rapidly expanding across payment/settlement infrastructure, escrow, offline payments, and gift shop services — designing improvements users actually feel, grounded in funnel and CS data analysis. Contributed to +271% escrow transaction volume growth and +104% new offline payment user acquisition. Previously at Gabia, led systematic modernization of PHP legacy systems into Java/Spring-based MSA with hexagonal architecture and event-driven patterns.
+
+Designs beyond feature delivery — incorporating incident response, settlement, and operations into the architecture, while accelerating team velocity through runbooks and integration documentation.
