--- a/src/content/en/techstack.mdx
+++ b/src/content/en/techstack.mdx
@@ -12,6 +12,8 @@ categories:
         level: "expert"
       - name: "PHP"
         level: "advanced"
+      - name: "CodeIgniter"
+        level: "advanced"
       - name: "REST API"
         level: "expert"
       - name: "GraphQL"
