--- a/src/content/ko/experience.mdx
+++ b/src/content/ko/experience.mdx
@@ -9,19 +9,19 @@ items:
     website: "https://www.daangnpay.com"
     techUsed: ["Kotlin", "Spring Framework", "JPA", "MySQL", "Redis", "Kafka", "Vue.js", "Docker", "Kubernetes"]
     highlights:
-      - "PG 이중화 및 실시간 정산 시스템 구축으로 결제 안정성 강화 및 파트너 정산 주기 단축"
-      - "현장결제 선불결제 정산 및 프로모션 시스템 구축, 서비스 정식 오픈 기여"
-      - "안심결제 카드결제/송장추적 기능 개발로 거래 안전성 강화"
-      - "B2B 기프티콘 발급 플랫폼 구축으로 신규 비즈니스 채널 확보"
-      - "Spring Boot 2→3, Vue.js 2→3 마이그레이션으로 보안 취약점 해소 및 유지보수성 개선"
+      - "현장결제 서비스 핵심 기능 설계·런칭 및 브랜드 프로모션 운영으로 신규 유저 유입 +104%, 일일 가입량 1.5배 증가"
+      - "안심결제 퍼널/CS 기반 개선 및 카드결제 개발로 거래진행 구매자 +122%, 거래금액 +271% 성장 기여"
+      - "PG 이중화·KCP 연동 등 결제 인프라 강화, 현금영수증 자동화로 ~4,600건 수작업 제거"
+      - "B2B 기프티콘 플랫폼 구축 및 당근알바 채팅방 연동으로 신규 비즈니스 채널 확보"
+      - "Spring Boot 2→3, Vue.js 2→3 마이그레이션 및 40+ 모듈 구조 정리로 유지보수성 개선"
   - slug: "gabia"
     company: "(주) 가비아"
     role: "백엔드 엔지니어"
     startDate: "2021-05"
     endDate: "2024-05"
-    location: "서울"
+    location: "판교"
     website: "https://domain.gabia.com"
-    techUsed: ["Java", "Spring Framework", "JPA", "PHP", "MySQL", "Oracle", "Nginx", "Docker"]
+    techUsed: ["Java", "Spring Framework", "JPA", "PHP", "CodeIgniter", "Oracle", "MySQL", "Nginx", "Docker"]
     highlights:
       - "다수의 도메인 레지스트라 서비스 개발 및 운영 (등록, 연장, 예약, 취소, 변경 등)"
       - "Java Spring MVC, JPA 기반의 MSA 분리 및 RESTful API / Batch 개발"
