--- a/src/content/ko/profile.mdx
+++ b/src/content/ko/profile.mdx
@@ -8,4 +8,8 @@ location: "서울, 대한민국"
 photo: "/images/Gopherized_Luke.png"
 ---
 
-결제/정산 도메인에서 안정성과 확장성을 갖춘 시스템을 설계하고 구축하는 데 강점이 있는 백엔드 엔지니어입니다. 당근페이에서 Kotlin + Spring 기반 PG 이중화 및 실시간 정산 시스템을 구축하고 있으며, 가비아에서는 레거시 통신 데몬의 처리량을 1,000배 개선(200 → 200,000 동시요청)한 경험이 있습니다. 레거시 환경에서도 체계적인 현대화를 주도하며, 비즈니스 임팩트를 만들어내는 개발자입니다.
+결제 시스템의 안정성을 설계하고, 그 위에서 사용자 성장을 만들어내는 백엔드 엔지니어입니다.
+
+당근페이에서 결제/정산 인프라부터 안심결제, 현장결제, 선물가게까지 빠르게 도메인을 확장하며, 퍼널·CS 데이터를 기반으로 사용자가 체감하는 개선을 설계합니다. 안심결제 거래금액 +271%, 현장결제 신규 유저 유입 +104%의 성장에 기여했습니다. 가비아에서는 PHP 레거시 시스템을 Java/Spring 기반 MSA로 이관하며 헥사고날 아키텍처와 이벤트 드리븐 패턴을 적용해 체계적인 현대화를 주도했습니다.
+
+기능 개발에서 끝나지 않고 장애 대응·정산·운영까지 설계에 포함하며, Runbook과 연동 가이드 같은 문서화로 팀의 속도를 함께 올리는 방식으로 일합니다.
