--- a/src/content/ko/projects/202405-payment-settlement.mdx
+++ b/src/content/ko/projects/202405-payment-settlement.mdx
@@ -5,20 +5,39 @@ teamSize: 8
 
 ## 프로젝트 개요
 
-당근페이의 온라인 결제 및 정산 시스템을 고도화하는 프로젝트입니다. PG 이중화, 실시간 정산, 자동결제 개선 등 결제 인프라의 안정성과 확장성을 높이는 작업을 수행했습니다.
+당근페이의 온라인 결제 및 정산 시스템을 고도화하는 프로젝트입니다. PG 이중화, 실시간 정산, 자동결제 개선 등 결제 인프라의 안정성과 확장성을 높이고, 현금영수증·결제수단·모듈 구조 등 핵심 인프라를 정비했습니다.
 
 ## 주요 업무
 
-- 결제 PG 이중화 및 트래픽 분배 기능 구현으로 결제 안정성 확보
+### 결제 인프라 안정성 및 확장성 강화
+- PG 이중화 및 트래픽 분배 기능 구현으로 단일 PG 장애 시 무중단 결제 처리
+- KCP PG 운영환경 연동으로 결제 수수료 절감 
+- PG 배분 로직 기술부채 정리, PG사/결제수단 추가 시 운영 환경에서 신속 조정 가능한 어드민 구축
+- 결제수단 개념 정리 (결제 방식/수단/PG 혼재 해소) 및 정책 구현 클래스 분리
+
+### 정산 시스템 구축 및 운영 지원
 - 실시간 정산 시스템 설계 및 구축
-- 자동결제 서비스의 실패율 분석 및 개선
-- 하나카드, 국민카드 간편등록(앱카드 상호연동) 기능 개발
-- 현금영수증 재발급 기능 추가
-- 파트너 어드민 구축 및 결제내역 어드민 개선
-- 당근페이 결제/정산 연동 지원
+- 정산/지급/대사 API 및 쿼리 정비로 검증과 조회 안정성 확보
+- 타팀 신사업 결제/정산 연동 지원 (전문가팀 세탁서비스, 중고차 바로경매/대면경매, 택배예약)
+
+### 현금영수증 시스템 고도화
+- 현금영수증 발급/실패/재발급/벌크 발급 전반 설계·구현·리팩토링
+- 운영자 수작업 처리 구간을 시스템으로 흡수, 약 4,600건 규모의 재발급 처리를 기능으로 흡수
+
+### 간편등록 및 결제 경험 개선
+- 하나카드 앱카드 간편등록 기능 개발 및 신규 등록 시 최우선 정렬
+- 국민카드 앱카드 간편등록 개발, 앱카드 등록 가능여부 조회를 서버 드리븐으로 변경
+- 환경/계정 단위 개별 카드사 간편등록 테스트 환경 구축
+- 자동결제 실패 원인 분석 및 재시도 로직 개선
+
+### 시스템 구조 개선 및 어드민 고도화
+- 결제 시스템 40개 이상 모듈의 계층별 구조 정리로 가독성 및 이해도 개선
+- 파트너 어드민 구축 및 결제내역 어드민 개선 (파트너 필터 위계화, PG사/수수료/금액 합계 추가)
+- 택배사 관리 어드민 구축으로 CS 대응 속도 개선
 
 ## 성과
 
 - PG 이중화를 통해 단일 PG 장애 시에도 무중단 결제 처리 가능, 결제 안정성 확보
-- 실시간 정산 시스템 구축으로 파트너사 정산 주기 단축 <!-- TODO: 구체적 수치 (예: D+N일 → 실시간) -->
-- 자동결제 실패 원인 분석 및 재시도 로직 개선을 통해 결제 성공률 향상 <!-- TODO: 구체적 수치 (예: N% → N%) -->
+- KCP 연동을 통한 PG 수수료 절감 
+- 현금영수증 재발급/조회 자동화로 CS·운영 대응 속도 개선, 약 4,600건 재발급 처리를 기능으로 흡수
+- 타팀 신사업 연동 지원으로 결제/정산 활용의 개발·조율 병목 해소 및 일정 리스크 절감
