--- a/src/content/ko/projects/202505-offline-payment.mdx
+++ b/src/content/ko/projects/202505-offline-payment.mdx
@@ -5,16 +5,36 @@ teamSize: 7
 
 ## 프로젝트 개요
 
-당근페이 현장결제 서비스의 백엔드 시스템을 개발하고 운영합니다. 오프라인 매장에서 당근페이를 통한 결제를 지원하며, 선불결제 정산 및 각종 프로모션 시스템을 구축하고 있습니다.
+당근페이 현장결제 서비스의 백엔드 시스템을 설계·개발하고 운영합니다. 오프라인 매장에서 QR/바코드 기반 당근페이 결제를 지원하며, 선불결제 정산·브랜드 프로모션·쿠폰 복합결제 등 서비스 확장을 담당하고 있습니다.
 
 ## 주요 업무
 
-- 현장결제 선불결제 정산 기능 설계 및 개발
-- 각종 브랜드사 할인 스킴 구현 및 가맹점 관리 시스템 고도화
-- 내근처 매장 조회 기능 구축
-- 브랜드 프로모션 등 서비스 그로스를 위한 다양한 기능 개발
+### 현장결제 핵심 기능 설계 및 구축
+- QR/바코드 결제(카드사 연동) 및 승인/환불 API 설계·구현
+- 매입/정산 처리, 포인트 복합결제 등 신규 런칭에 필요한 결제 흐름 전반 구축
+- 내근처 가맹점 인프라(좌표/클러스터/성능 최적화) 구축
+- 정산 보정/차액정산, 영업일 기준 정산 지급 등 운영 기반 설계
+
+### 브랜드 프로모션 시스템 설계 및 그로스 견인
+- 10건 이상의 브랜드 제휴 프로모션을 병렬 운영할 수 있는 확장 가능한 프로모션 스킴 구현
+- 타임딜/예산/혜택 노출 등 프로모션 요구사항을 서비스 구조 안에 안정적으로 설계
+- 진입점 및 노출 지면 확장 (현장결제 홈 상단바·바텀시트 배너, 내근처매장/가맹점 상세)
+- 예산 동시성 이슈 개선 및 소진율 알림 추가, 결제 실패/취소 케이스 정리
+
+### 브랜드 가맹점 관리 및 운영 고도화
+- 브랜드 단위 가맹점 프로모션 운영 이슈 해결 및 브랜드 관리 고도화
+- 브랜드별 QR/바코드 가능 여부 정책 정리 (브랜드/가맹점 단위 관리)
+- 어드민 기능 확대 (배너/정책/가맹점 관리/거래내역·CSV 내보내기/문구 관리)
+- 현장결제 카드결제 지원 기반 작업
+
+### 쿠폰 복합결제 및 부가기능
+- 쿠폰 복합결제 서비스 설계·구현 (승인 시 쿠폰 적용, 조회 실패/취소 금액 처리)
+- 연말정산 미리보기 (현장결제 이용금액 반영) 개발
+- 카드사 소득공제 관련 데이터 적재 및 파일 생성 배치 구현
 
 ## 성과
 
 - 현장결제 서비스 정식 오픈 및 안정적 운영 달성
-- 브랜드 프로모션 시스템을 통한 사용자 확보 및 가맹점 활성화 기여 <!-- TODO: 구체적 수치 (예: N개 가맹점, MAU N명 등) -->
+- &lt;깎았당&gt; 프로모션을 통한 당근페이 일일 가입량 평균 대비 1.5배 증가
+- 현장결제 신규 유저 유입 (직전 동일 기간 대비 +104%)
+- Non-Promotion 2회 이상 결제 유저 +114% 확대, 반복 사용 기반 확대
