--- a/src/content/en/projects/202405-payment-settlement.mdx
+++ b/src/content/en/projects/202405-payment-settlement.mdx
@@ -4,18 +4,40 @@ teamSize: 8
 ---
 
 ## Overview
-Enhanced Karrot Pay's online payment and settlement systems. Focused on improving stability and scalability of payment infrastructure through PG redundancy, real-time settlement, and auto-payment improvements.
+
+Enhanced Karrot Pay's online payment and settlement systems. Focused on improving stability and scalability of payment infrastructure through PG redundancy, real-time settlement, and auto-payment improvements, while restructuring core infrastructure including cash receipts, payment methods, and module architecture.
 
 ## Key Responsibilities
-- Implemented PG redundancy and traffic distribution for payment stability
+
+### Payment Infrastructure Stability & Scalability
+- Implemented PG redundancy and traffic distribution for uninterrupted payment processing during single PG outages
+- Integrated KCP PG to reduce payment processing fees 
+- Refactored PG distribution logic and built admin for rapid operational adjustments when adding PG providers or payment methods
+- Unified payment method concepts (resolved mixing of payment types/methods/PG) and separated policy implementation classes
+
+### Settlement System Development & Operations
 - Designed and built real-time settlement system
-- Analyzed and improved auto-payment failure rates
-- Developed Hana Card and KB Card easy registration (app card interlock)
-- Added cash receipt reissuance feature
-- Built partner admin and improved payment history admin
-- Supported Karrot Pay payment/settlement integration
+- Stabilized settlement/payout/reconciliation APIs and queries for reliable verification and retrieval
+- Supported payment/settlement integration for other teams' new services (expert laundry, used car auctions, delivery reservations)
+
+### Cash Receipt System Enhancement
+- Designed, implemented, and refactored the entire cash receipt lifecycle (issuance/failure/reissuance/bulk issuance)
+- Absorbed ~4,600 manual reissuance cases into automated system functionality
+
+### Easy Registration & Payment Experience
+- Developed Hana Card app card easy registration with priority sorting for new registrations
+- Built KB Card app card easy registration with server-driven registration availability checks
+- Set up per-environment and per-account card company easy registration test environments
+- Analyzed auto-payment failure causes and improved retry logic
+
+### System Architecture & Admin Enhancement
+- Restructured 40+ payment system modules into clear hierarchical layers for improved readability
+- Built partner admin and enhanced payment history admin (hierarchical partner filters, PG/fee/amount aggregation)
+- Built courier management admin to improve CS response speed
 
 ## Results
+
 - Enabled uninterrupted payment processing during single PG outages through PG redundancy
-- Reduced partner settlement cycles by building real-time settlement system <!-- TODO: specific metrics (e.g., D+N days → real-time) -->
-- Improved payment success rate through failure analysis and retry logic optimization <!-- TODO: specific metrics (e.g., N% → N%) -->
+- Reduced PG processing fees through KCP integration 
+- Automated cash receipt reissuance/retrieval, absorbing ~4,600 manual reissuance cases and improving CS response speed
+- Reduced development/coordination bottlenecks for other teams' payment/settlement integrations
