--- a/src/content/ko/projects.mdx
+++ b/src/content/ko/projects.mdx
@@ -7,10 +7,10 @@ items:
     endDate: ""
     techUsed: ["Kotlin", "Spring Framework", "JPA", "MySQL", "Redis", "Kafka"]
     highlights:
-      - "현장결제 선불결제 정산 기능 개발"
-      - "각종 브랜드사 할인 스킴 구현 및 가맹점 관리 고도화"
-      - "내근처 매장 조회 기능 구축"
-      - "브랜드 프로모션 등 그로스 액션"
+      - "QR/바코드 결제(카드사 연동) 및 선불결제 정산 시스템 설계·구축"
+      - "10건+ 브랜드 제휴 프로모션 병렬 운영 가능한 스킴 설계 및 가맹점 관리 고도화"
+      - "내근처 매장 인프라(좌표/클러스터/성능) 및 쿠폰 복합결제 구축"
+      - "신규 유저 유입 +104%, 당근페이 일일 가입량 1.5배 증가 기여"
   - slug: "gift-shop"
     title: "선물가게 서비스"
     company: "(주) 당근페이"
@@ -18,31 +18,33 @@ items:
     endDate: "2025-05"
     techUsed: ["Kotlin", "Spring Framework", "JPA", "MySQL", "Redis"]
     highlights:
-      - "B2B 프로모션 기프티콘 발급 플랫폼 개발"
-      - "카드 결제 관련 정산 정책 변경 대응"
-      - "상품권 사용처 데이터 적재 등 고도화 작업"
+      - "B2B/B2C 기프티콘 플랫폼화 (정책·데이터 구조 정리, 수명주기 정비, 내부 API/운영 기능 확장)"
+      - "카드결제 결제수단 추가 및 정산 정책 변경 대응으로 결제 접근성 개선"
+      - "당근알바 채팅방 연동으로 선물가게 진입 흐름 구축 (진입/이벤트/메시지 흐름 정비)"
+      - "B2B 기프티콘 기반으로 기존 판매가 대비 1%+ 할인 혜택 제공 가능한 구조 확보"
   - slug: "escrow-service"
     title: "안심결제 서비스"
     company: "(주) 당근페이"
     startDate: "2024-08"
-    endDate: "2024-11"
+    endDate: "2025-06"
     techUsed: ["Kotlin", "Spring Framework", "JPA", "MySQL", "Vue.js"]
     highlights:
-      - "환금성 조회 및 카드결제 기능 개발"
-      - "안심결제 송장 등록 및 택배추적 기능 개발"
-      - "택배사 추가 및 송장 수동 등록 기능 및 어드민 개발"
+      - "CS 인입/퍼널 지표 기반 전환율 개선 (채팅 메시지/수락 플로우/정책 검증/어드민 개선)"
+      - "안심결제 카드결제 및 환금성 조회 기능 개발로 결제 경험 확장 및 거래 안전성 강화"
+      - "스윗트래커 기반 택배 송장 등록/배송상태 조회 및 택배사 관리 어드민 구축"
+      - "거래진행 구매자 +122% , 거래금액 +271% , 거래건수 +161%"
   - slug: "payment-settlement"
     title: "결제 / 정산 시스템"
     company: "(주) 당근페이"
     startDate: "2024-05"
-    endDate: "2024-11"
+    endDate: "2025-03"
     techUsed: ["Kotlin", "Spring Framework", "JPA", "MySQL", "Redis", "Kafka", "Vue.js"]
     highlights:
-      - "PG 이중화 및 트래픽 분배로 결제 안정성 확보"
-      - "실시간 정산 시스템 구축으로 파트너 정산 주기 단축"
-      - "자동결제 실패 분석 및 재시도 로직 개선으로 결제 성공률 향상"
-      - "하나카드 및 국민카드 간편등록 기능 개발"
-      - "파트너 어드민 구축 및 결제내역 어드민 개선"
+      - "PG 이중화 및 KCP 연동으로 결제 안정성 확보 및 수수료 절감 "
+      - "현금영수증 전 주기 리팩토링, ~4,600건 재발급 처리 자동화"
+      - "결제수단 개념 정리 및 40+ 모듈 계층화로 시스템 구조 개선"
+      - "하나카드·국민카드 간편등록 개발 및 파트너 어드민 구축"
+      - "타팀 신사업(중고차·택배예약 등) 결제/정산 연동 지원"
   - slug: "karrot-pay-devexp"
     title: "개발환경 개선 및 기술부채 청산"
     company: "(주) 당근페이"
@@ -54,12 +56,13 @@ items:
       - "어드민 Vue.js 2→3 버전 업"
       - "Jacoco Badge Generator 기반 테스트 커버리지 시각화"
       - "당근페이 연동 가이드 및 Scalar 기반 API 문서 사이트 구축"
+      - "결제/정산/안심결제/현장결제 영역 Runbook 정리 및 보강"
   - slug: "domain-services"
     title: "도메인 서비스 개발 및 고도화"
     company: "(주) 가비아"
     startDate: "2021-05"
     endDate: "2024-05"
-    techUsed: ["Java", "Spring Framework", "JPA", "PHP", "MySQL", "Oracle", "Nginx"]
+    techUsed: ["Java", "Spring Framework", "JPA", "PHP", "CodeIgniter", "Oracle", "MySQL", "Nginx"]
     highlights:
       - "신규 도메인 레지스트리 시스템 구축"
       - "Redis 다중 분산락 기반 통합 주문 서비스로 동시성 이슈 해결"
@@ -70,7 +73,7 @@ items:
     company: "(주) 가비아"
     startDate: "2021-08"
     endDate: "2024-05"
-    techUsed: ["Java", "Spring Framework", "PHP", "MySQL", "Nginx", "Docker"]
+    techUsed: ["Java", "Spring Framework", "PHP", "CodeIgniter", "Oracle", "MySQL", "Nginx", "Docker"]
     highlights:
       - "헥사고날 아키텍처 및 멀티모듈 설계 적용, 모노레포 도입"
       - "레지스트리 통신 데몬 개선으로 동시 처리량 1,000배 향상 (200 → 200,000)"
