fix: update gift-shop project dates and rename files to reflect actual timeline

--- a/src/content/en/projects.mdx
+++ b/src/content/en/projects.mdx
@@ -14,8 +14,8 @@ items:
   - slug: "gift-shop"
     title: "Gift Shop Service"
     company: "Karrot Pay"
-    startDate: "2024-11"
-    endDate: "2025-05"
+    startDate: "2025-06"
+    endDate: ""
     techUsed: ["Kotlin", "Spring Framework", "JPA", "MySQL", "Redis"]
     highlights:
       - "Built B2B/B2C gift card platform (policy/data structure, lifecycle management, internal API/ops expansion)"
