--- a/src/content/ko/projects.mdx
+++ b/src/content/ko/projects.mdx
@@ -14,8 +14,8 @@ items:
   - slug: "gift-shop"
     title: "선물가게 서비스"
     company: "(주) 당근페이"
-    startDate: "2024-11"
-    endDate: "2025-05"
+    startDate: "2025-06"
+    endDate: ""
     techUsed: ["Kotlin", "Spring Framework", "JPA", "MySQL", "Redis"]
     highlights:
       - "B2B/B2C 기프티콘 플랫폼화 (정책·데이터 구조 정리, 수명주기 정비, 내부 API/운영 기능 확장)"
