feat: separate projects into Work/Personal tabs, add header Source link and README
- Add type field (work/personal) to Project model and all project MDX content
- Add tab filtering (All/Work/Personal) to ProjectsSection using shadcn Tabs
- Add GitHub source link with label to header
- Add author name to footer copyright
- Replace default create-next-app README with project-specific content

--- a/src/content/en/projects.mdx
+++ b/src/content/en/projects.mdx
@@ -3,6 +3,7 @@ items:
   - slug: "offline-payment"
     title: "Offline Payment Service"
     company: "Karrot Pay"
+    type: "work"
     startDate: "2025-05"
     endDate: ""
     techUsed: ["Kotlin", "Spring Framework", "JPA", "MySQL", "Redis", "Kafka"]
@@ -14,6 +15,7 @@ items:
   - slug: "gift-shop"
     title: "Gift Shop Service"
     company: "Karrot Pay"
+    type: "work"
     startDate: "2025-06"
     endDate: ""
     techUsed: ["Kotlin", "Spring Framework", "JPA", "MySQL", "Redis"]
@@ -25,6 +27,7 @@ items:
   - slug: "escrow-service"
     title: "Escrow Service"
     company: "Karrot Pay"
+    type: "work"
     startDate: "2024-08"
     endDate: "2025-06"
     techUsed: ["Kotlin", "Spring Framework", "JPA", "MySQL", "Vue.js"]
@@ -36,6 +39,7 @@ items:
   - slug: "payment-settlement"
     title: "Payment / Settlement System"
     company: "Karrot Pay"
+    type: "work"
     startDate: "2024-05"
     endDate: "2025-03"
     techUsed: ["Kotlin", "Spring Framework", "JPA", "MySQL", "Redis", "Kafka", "Vue.js"]
@@ -48,6 +52,7 @@ items:
   - slug: "karrot-pay-devexp"
     title: "Developer Experience & Tech Debt"
     company: "Karrot Pay"
+    type: "work"
     startDate: "2024-05"
     endDate: ""
     techUsed: ["Kotlin", "Spring Framework", "Vue.js", "Github Actions"]
@@ -60,6 +65,7 @@ items:
   - slug: "domain-services"
     title: "Domain Services Development"
     company: "Gabia"
+    type: "work"
     startDate: "2021-05"
     endDate: "2024-05"
     techUsed: ["Java", "Spring Framework", "JPA", "PHP", "CodeIgniter", "Oracle", "MySQL", "Nginx"]
@@ -71,6 +77,7 @@ items:
   - slug: "gabia-legacy"
     title: "Legacy Modernization & DevExp"
     company: "Gabia"
+    type: "work"
     startDate: "2021-08"
     endDate: "2024-05"
     techUsed: ["Java", "Spring Framework", "PHP", "CodeIgniter", "Oracle", "MySQL", "Nginx", "Docker"]
@@ -81,6 +88,7 @@ items:
       - "Set up PHP Composer autoload, Xdebug and improved Sentry alerting"
   - slug: "mattermost-sentrybot"
     title: "Mattermost Sentrybot"
+    type: "personal"
     startDate: "2023-06"
     endDate: "2023-06"
     techUsed: ["Python", "FastAPI", "Docker"]
@@ -91,6 +99,7 @@ items:
       github: "https://github.com/copolio/mattermost-sentrybot"
   - slug: "namegpt"
     title: "NameGPT"
+    type: "personal"
     startDate: "2023-04"
     endDate: "2023-05"
     techUsed: ["Go", "TypeScript", "Next.js"]
@@ -101,6 +110,7 @@ items:
       github: "https://github.com/copolio/namegpt"
   - slug: "webcron"
     title: "Webcron"
+    type: "personal"
     startDate: "2022-06"
     endDate: "2022-08"
     techUsed: ["Kotlin", "Spring Framework", "JPA", "TypeScript", "Vue.js"]
