--- a/src/content/ko/projects.mdx
+++ b/src/content/ko/projects.mdx
@@ -3,6 +3,7 @@ items:
   - slug: "offline-payment"
     title: "현장결제 서비스"
     company: "(주) 당근페이"
+    type: "work"
     startDate: "2025-05"
     endDate: ""
     techUsed: ["Kotlin", "Spring Framework", "JPA", "MySQL", "Redis", "Kafka"]
@@ -14,6 +15,7 @@ items:
   - slug: "gift-shop"
     title: "선물가게 서비스"
     company: "(주) 당근페이"
+    type: "work"
     startDate: "2025-06"
     endDate: ""
     techUsed: ["Kotlin", "Spring Framework", "JPA", "MySQL", "Redis"]
@@ -25,6 +27,7 @@ items:
   - slug: "escrow-service"
     title: "안심결제 서비스"
     company: "(주) 당근페이"
+    type: "work"
     startDate: "2024-08"
     endDate: "2025-06"
     techUsed: ["Kotlin", "Spring Framework", "JPA", "MySQL", "Vue.js"]
@@ -36,6 +39,7 @@ items:
   - slug: "payment-settlement"
     title: "결제 / 정산 시스템"
     company: "(주) 당근페이"
+    type: "work"
     startDate: "2024-05"
     endDate: "2025-03"
     techUsed: ["Kotlin", "Spring Framework", "JPA", "MySQL", "Redis", "Kafka", "Vue.js"]
@@ -48,6 +52,7 @@ items:
   - slug: "karrot-pay-devexp"
     title: "개발환경 개선 및 기술부채 청산"
     company: "(주) 당근페이"
+    type: "work"
     startDate: "2024-05"
     endDate: ""
     techUsed: ["Kotlin", "Spring Framework", "Vue.js", "Github Actions"]
@@ -60,6 +65,7 @@ items:
   - slug: "domain-services"
     title: "도메인 서비스 개발 및 고도화"
     company: "(주) 가비아"
+    type: "work"
     startDate: "2021-05"
     endDate: "2024-05"
     techUsed: ["Java", "Spring Framework", "JPA", "PHP", "CodeIgniter", "Oracle", "MySQL", "Nginx"]
@@ -71,6 +77,7 @@ items:
   - slug: "gabia-legacy"
     title: "레거시 시스템 개선 및 개발환경 개선"
     company: "(주) 가비아"
+    type: "work"
     startDate: "2021-08"
     endDate: "2024-05"
     techUsed: ["Java", "Spring Framework", "PHP", "CodeIgniter", "Oracle", "MySQL", "Nginx", "Docker"]
@@ -81,6 +88,7 @@ items:
       - "PHP Composer autoload, Xdebug 도입 및 Sentry 관제 알림 개선"
   - slug: "mattermost-sentrybot"
     title: "Mattermost Sentrybot"
+    type: "personal"
     startDate: "2023-06"
     endDate: "2023-06"
     techUsed: ["Python", "FastAPI", "Docker"]
@@ -91,6 +99,7 @@ items:
       github: "https://github.com/copolio/mattermost-sentrybot"
   - slug: "namegpt"
     title: "NameGPT"
+    type: "personal"
     startDate: "2023-04"
     endDate: "2023-05"
     techUsed: ["Go", "TypeScript", "Next.js"]
@@ -101,6 +110,7 @@ items:
       github: "https://github.com/copolio/namegpt"
   - slug: "webcron"
     title: "Webcron"
+    type: "personal"
     startDate: "2022-06"
     endDate: "2022-08"
     techUsed: ["Kotlin", "Spring Framework", "JPA", "TypeScript", "Vue.js"]
