fix: remove remaining absolute user counts from content
Remove absolute user count values from profile,
experience, and project detail pages. Retain percentage rates only.

--- a/src/content/en/projects.mdx
+++ b/src/content/en/projects.mdx
@@ -11,7 +11,7 @@ items:
       - "Designed and built QR/barcode payment (card company integration) and prepaid settlement system"
       - "Built scalable promotion schemes for 10+ concurrent brand promotions with merchant management"
       - "Developed nearby store infrastructure (coordinates/clustering/performance) and coupon-based combined payment"
-      - "Drove new user acquisition (+104%) and 1.5x daily Karrot Pay signups"
+      - "Drove +104% new user acquisition and 1.5x daily Karrot Pay signups"
   - slug: "gift-shop"
     title: "Gift Shop Service"
     company: "Karrot Pay"
