--- a/src/content/en/projects/202505-offline-payment.mdx
+++ b/src/content/en/projects/202505-offline-payment.mdx
@@ -36,5 +36,5 @@ Designed, developed, and operated the backend system for Karrot Pay's offline pa
 
 - Successfully launched and stably operated the offline payment service
 - Increased daily Karrot Pay signups by 1.5x through brand promotion campaign
-- Acquired +104% new offline payment user acquisition (vs. prior period)
+- New offline payment user acquisition +104% (vs. prior period)
 - Expanded repeat usage base: non-promotion users with 2+ payments grew +114%
