--- a/src/content/ko/projects/202505-offline-payment.mdx
+++ b/src/content/ko/projects/202505-offline-payment.mdx
@@ -36,5 +36,5 @@ teamSize: 7
 
 - 현장결제 서비스 정식 오픈 및 안정적 운영 달성
 - &lt;깎았당&gt; 프로모션을 통한 당근페이 일일 가입량 평균 대비 1.5배 증가
-- 현장결제 신규 유저 유입 (직전 동일 기간 대비 +104%)
+- 현장결제 신규 유저 유입 +104% (직전 동일 기간 대비)
 - Non-Promotion 2회 이상 결제 유저 +114% 확대, 반복 사용 기반 확대
