feat: add profile tagline and bio timeline section

--- a/src/content/en/profile.mdx
+++ b/src/content/en/profile.mdx
@@ -1,11 +1,25 @@
 ---
 name: "Kijung Kim"
 title: "Software Engineer"
+tagline: "Building scalable systems, breaking legacy"
 email: "rlwjd1504@gmail.com"
 github: "https://github.com/copolio"
 linkedin: "https://www.linkedin.com/in/kijung-kim-2485a9128"
 location: "Seoul, South Korea"
 photo: "/images/Gopherized_Luke.png"
+bio:
+  - year: "1996"
+    text: "Born in Seoul, South Korea"
+  - year: "2006"
+    text: "Moved to the Philippines"
+  - year: "2014"
+    text: "Enrolled at Ateneo de Manila University (Management Engineering)"
+  - year: "2018"
+    text: "Transferred to Hankuk University of Foreign Studies (International Commerce / Software Double Major)"
+  - year: "2021"
+    text: "Graduated from HUFS, Joined Gabia"
+  - year: "2024~"
+    text: "Joined Karrot Pay"
 ---
 
 Backend engineer who designs payment system reliability and drives user growth on top of it.
