--- a/src/content/ko/profile.mdx
+++ b/src/content/ko/profile.mdx
@@ -1,11 +1,25 @@
 ---
 name: "김기정"
 title: "백엔드 엔지니어"
+tagline: "확장 가능한 시스템을 만들고, 레거시를 부수는 개발자"
 email: "rlwjd1504@gmail.com"
 github: "https://github.com/copolio"
 linkedin: "https://www.linkedin.com/in/kijung-kim-2485a9128"
 location: "서울, 대한민국"
 photo: "/images/Gopherized_Luke.png"
+bio:
+  - year: "1996"
+    text: "서울에서 출생"
+  - year: "2006"
+    text: "필리핀으로 이주"
+  - year: "2014"
+    text: "아테네오 대학교 마닐라 입학 (경영공학)"
+  - year: "2018"
+    text: "한국외국어대학교 편입 (국제통상학 / 융복합 소프트웨어 복수전공)"
+  - year: "2021"
+    text: "한국외국어대학교 졸업, (주) 가비아 입사"
+  - year: "2024~"
+    text: "(주) 당근페이 입사"
 ---
 
 결제 시스템의 안정성을 설계하고, 그 위에서 사용자 성장을 만들어내는 백엔드 엔지니어입니다.
