docs: refine tagline to emphasize strategic technical debt management

--- a/src/content/en/profile.mdx
+++ b/src/content/en/profile.mdx
@@ -1,7 +1,7 @@
 ---
 name: "Kijung Kim"
 title: "Software Engineer"
-tagline: "Building scalable systems, breaking legacy"
+tagline: "Building scalable systems, strategically managing technical debt"
 email: "rlwjd1504@gmail.com"
 github: "https://github.com/copolio"
 linkedin: "https://www.linkedin.com/in/kijung-kim-2485a9128"
