--- a/src/content/ko/profile.mdx
+++ b/src/content/ko/profile.mdx
@@ -1,7 +1,7 @@
 ---
 name: "김기정"
 title: "백엔드 엔지니어"
-tagline: "확장 가능한 시스템을 만들고, 레거시를 부수는 개발자"
+tagline: "확장 가능한 시스템을 설계하고, 기술 부채를 전략적으로 관리하는 개발자"
 email: "rlwjd1504@gmail.com"
 github: "https://github.com/copolio"
 linkedin: "https://www.linkedin.com/in/kijung-kim-2485a9128"
