refactor: rename role to server engineer and improve print pages

--- a/src/content/en/experience.mdx
+++ b/src/content/en/experience.mdx
@@ -2,7 +2,7 @@
 items:
   - slug: "karrot-pay"
     company: "Karrot Pay"
-    role: "Software Engineer"
+    role: "Server Engineer"
     startDate: "2024-05"
     endDate: ""
     location: "Seoul"
@@ -16,7 +16,7 @@ items:
       - "Migrated Spring Boot 2→3, Vue.js 2→3, and restructured 40+ modules for improved maintainability"
   - slug: "gabia"
     company: "Gabia"
-    role: "Software Engineer"
+    role: "Server Engineer"
     startDate: "2021-05"
     endDate: "2024-05"
     location: "Pangyo"
