--- a/src/content/en/profile.mdx
+++ b/src/content/en/profile.mdx
@@ -1,6 +1,6 @@
 ---
 name: "Kijung Kim"
-title: "Software Engineer"
+title: "Server Engineer"
 tagline: "Building scalable systems, strategically managing technical debt"
 email: "rlwjd1504@gmail.com"
 github: "https://github.com/copolio"
@@ -22,7 +22,7 @@ bio:
     text: "Joined Karrot Pay"
 ---
 
-Backend engineer who designs payment system reliability and drives user growth on top of it.
+Server engineer who designs payment system reliability and drives user growth on top of it.
 
 At Karrot Pay, rapidly expanding across payment/settlement infrastructure, escrow, offline payments, and gift shop services — designing improvements users actually feel, grounded in funnel and CS data analysis. Contributed to +271% escrow transaction volume growth and +104% new offline payment user acquisition. Previously at Gabia, led systematic modernization of PHP legacy systems into Java/Spring-based MSA with hexagonal architecture and event-driven patterns.
 
