--- a/src/content/ko/experience.mdx
+++ b/src/content/ko/experience.mdx
@@ -2,7 +2,7 @@
 items:
   - slug: "karrot-pay"
     company: "(주) 당근페이"
-    role: "백엔드 엔지니어"
+    role: "서버 엔지니어"
     startDate: "2024-05"
     endDate: ""
     location: "서울"
@@ -16,7 +16,7 @@ items:
       - "Spring Boot 2→3, Vue.js 2→3 마이그레이션 및 40+ 모듈 구조 정리로 유지보수성 개선"
   - slug: "gabia"
     company: "(주) 가비아"
-    role: "백엔드 엔지니어"
+    role: "서버 엔지니어"
     startDate: "2021-05"
     endDate: "2024-05"
     location: "판교"
