--- a/src/content/ko/profile.mdx
+++ b/src/content/ko/profile.mdx
@@ -1,6 +1,6 @@
 ---
 name: "김기정"
-title: "백엔드 엔지니어"
+title: "서버 엔지니어"
 tagline: "확장 가능한 시스템을 설계하고, 기술 부채를 전략적으로 관리하는 개발자"
 email: "rlwjd1504@gmail.com"
 github: "https://github.com/copolio"
@@ -22,7 +22,7 @@ bio:
     text: "(주) 당근페이 입사"
 ---
 
-결제 시스템의 안정성을 설계하고, 그 위에서 사용자 성장을 만들어내는 백엔드 엔지니어입니다.
+결제 시스템의 안정성을 설계하고, 그 위에서 사용자 성장을 만들어내는 서버 엔지니어입니다.
 
 당근페이에서 결제/정산 인프라부터 안심결제, 현장결제, 선물가게까지 빠르게 도메인을 확장하며, 퍼널·CS 데이터를 기반으로 사용자가 체감하는 개선을 설계합니다. 안심결제 거래금액 +271%, 현장결제 신규 유저 유입 +104%의 성장에 기여했습니다. 가비아에서는 PHP 레거시 시스템을 Java/Spring 기반 MSA로 이관하며 헥사고날 아키텍처와 이벤트 드리븐 패턴을 적용해 체계적인 현대화를 주도했습니다.
 
