docs: polish profile summary and fix experience tense consistency

--- a/src/content/en/experience.mdx
+++ b/src/content/en/experience.mdx
@@ -9,11 +9,11 @@ items:
     website: "https://www.daangnpay.com"
     techUsed: ["Kotlin", "Spring Framework", "JPA", "MySQL", "Redis", "Kafka", "Vue.js", "Docker", "Kubernetes"]
     highlights:
-      - "Designed core offline payment features and ran brand promotions, driving +104% new user acquisition and 1.5x daily signups"
-      - "Improved escrow service conversion via funnel/CS analysis and card payment, contributing to +122% buyers and +271% transaction volume"
-      - "Strengthened payment infrastructure with PG redundancy and KCP integration, automated ~4,600 manual cash receipt reissuances"
-      - "Built B2B gift card platform and Karrot Alba chatroom integration, establishing new business channels"
-      - "Migrated Spring Boot 2→3, Vue.js 2→3, and restructured 40+ modules for improved maintainability"
+      - "Design core offline payment features and run brand promotions, driving +104% new user acquisition and 1.5x daily signups"
+      - "Improve escrow service conversion via funnel/CS analysis and card payment, contributing to +122% buyers and +271% transaction volume"
+      - "Strengthen payment infrastructure with PG redundancy and KCP integration, automate ~4,600 manual cash receipt reissuances"
+      - "Build B2B gift card platform and Karrot Alba chatroom integration, establishing new business channels"
+      - "Migrate Spring Boot 2→3, Vue.js 2→3, and restructure 40+ modules for improved maintainability"
   - slug: "gabia"
     company: "Gabia"
     role: "Server Engineer"
