--- a/src/content/en/profile.mdx
+++ b/src/content/en/profile.mdx
@@ -22,8 +22,8 @@ bio:
     text: "Joined Karrot Pay"
 ---
 
-Server engineer who designs payment system reliability and drives user growth on top of it.
+Server engineer who drives user growth on top of reliable payment systems.
 
-At Karrot Pay, rapidly expanding across payment/settlement infrastructure, escrow, offline payments, and gift shop services — designing improvements users actually feel, grounded in funnel and CS data analysis. Contributed to +271% escrow transaction volume growth and +104% new offline payment user acquisition. Previously at Gabia, led systematic modernization of PHP legacy systems into Java/Spring-based MSA with hexagonal architecture and event-driven patterns.
+At Karrot Pay, rapidly expanding across payment/settlement infrastructure, escrow, offline payments, and gift shop services. Delivers improvements users actually feel through funnel and CS data analysis — contributing to +271% escrow transaction volume growth and +104% new offline payment user acquisition. Previously at Gabia, led systematic modernization of PHP legacy systems into Java/Spring-based MSA with hexagonal architecture and event-driven patterns.
 
-Designs beyond feature delivery — incorporating incident response, settlement, and operations into the architecture, while accelerating team velocity through runbooks and integration documentation.
+Goes beyond feature delivery — encompassing incident response, settlement, and operations, while accelerating team velocity through runbooks and integration documentation.
