--- a/src/content/ko/profile.mdx
+++ b/src/content/ko/profile.mdx
@@ -22,8 +22,8 @@ bio:
     text: "(주) 당근페이 입사"
 ---
 
-결제 시스템의 안정성을 설계하고, 그 위에서 사용자 성장을 만들어내는 서버 엔지니어입니다.
+안정적인 결제 시스템 위에서 사용자 성장을 만들어내는 서버 엔지니어입니다.
 
-당근페이에서 결제/정산 인프라부터 안심결제, 현장결제, 선물가게까지 빠르게 도메인을 확장하며, 퍼널·CS 데이터를 기반으로 사용자가 체감하는 개선을 설계합니다. 안심결제 거래금액 +271%, 현장결제 신규 유저 유입 +104%의 성장에 기여했습니다. 가비아에서는 PHP 레거시 시스템을 Java/Spring 기반 MSA로 이관하며 헥사고날 아키텍처와 이벤트 드리븐 패턴을 적용해 체계적인 현대화를 주도했습니다.
+당근페이에서 결제·정산 인프라, 안심결제, 현장결제, 선물가게 등 다양한 도메인을 빠르게 확장하고 있습니다. 퍼널·CS 데이터 분석을 통해 사용자가 체감하는 개선을 이끌어내며, 안심결제 거래금액 +271%, 현장결제 신규 유저 유입 +104% 성장에 기여했습니다. 이전 가비아에서는 PHP 레거시를 Java/Spring 기반 MSA로 전환하며 헥사고날 아키텍처와 이벤트 드리븐 패턴을 적용해 체계적인 현대화를 주도했습니다.
 
-기능 개발에서 끝나지 않고 장애 대응·정산·운영까지 설계에 포함하며, Runbook과 연동 가이드 같은 문서화로 팀의 속도를 함께 올리는 방식으로 일합니다.
+기능 개발에 그치지 않고 장애 대응·정산·운영까지 아우르며, Runbook과 연동 가이드 문서화로 팀 전체의 개발 속도를 높이는 방식으로 일합니다.
